# pcscDemoCode

./: CMakeLists.txt  Makefile  README.md  demo.c
.github/workflows/: ci.yaml  codeql.yml
cmake/: FindPCSC.cmake
